--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!--
-   viewHome.html  version 1.6  
-   
+   viewHome.html  version 1.6
+
    Sweet Home 3D, Copyright (c) 2016-2020 Emmanuel PUYBARET / eTeks <info@eteks.com>
-   
+
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 2 of the License, or
    (at your option) any later version.
- 
+
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
@@ -18,8 +18,8 @@
    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 -->
 <!--
-  To view this file locally without a HTTP server, be sure to allow access from files in your browser   
-  https://www.google.com/search?q=allow+access+from+files  
+  To view this file locally without a HTTP server, be sure to allow access from files in your browser
+  https://www.google.com/search?q=allow+access+from+files
  -->
 <html>
 <head>
@@ -43,8 +43,6 @@
 /* The class of components handled by the viewer */
 .viewerComponent  {
 }
-/* To display the viewer in full screen, uncomment the 3 following styles */
-/*
 body {
   overflow-x: hidden;
   overflow-y: hidden;
@@ -55,11 +53,10 @@ body {
   height: 100%;
 }
 #viewerNavigationDiv {
-  position: absolute; 
+  position: absolute;
   bottom: 5px;
   left: 5px;
 }
-*/
 </style>
 </head>
 
@@ -97,44 +94,45 @@ body {
       }
     };
   var onprogression = function(part, info, percentage) {
-      var progress = document.getElementById("viewerProgress"); 
+      var progress = document.getElementById("viewerProgress");
       if (part === HomeRecorder.READING_HOME) {
-        // Home loading is finished 
+        // Home loading is finished
         progress.value = percentage * 100;
         info = info.substring(info.lastIndexOf('/') + 1);
       } else if (part === Node3D.READING_MODEL) {
-        // Models loading is finished 
+        // Models loading is finished
         progress.value = 100 + percentage * 100;
         if (percentage === 1) {
           document.getElementById("viewerProgressDiv").style.visibility = "hidden";
         }
       }
-    
-      document.getElementById("viewerProgressLabel").innerHTML = 
+
+      document.getElementById("viewerProgressLabel").innerHTML =
           (percentage ? Math.floor(percentage * 100) + "% " : "") + part + " " + info;
     };
-   
+
   // Display home in canvas 3D
-  // Mouse and keyboard navigation explained at 
+  // Mouse and keyboard navigation explained at
   // http://sweethome3d.cvs.sf.net/viewvc/sweethome3d/SweetHome3D/src/com/eteks/sweethome3d/viewcontroller/resources/help/en/editing3DView.html
   // You may also switch between aerial view and virtual visit with the space bar
   // For browser compatibility, see http://caniuse.com/webgl
   viewHome("viewerCanvas",    // Id of the canvas
-           homeUrl,           // URL or relative URL of the home to display 
+           homeUrl,           // URL or relative URL of the home to display
            onerror,           // Callback called in case of error
-           onprogression,     // Callback called while loading 
-          {roundsPerMinute: 0,                    // Rotation speed of the animation launched once home is loaded in rounds per minute, no animation if missing or equal to 0 
-           navigationPanel: "none",               // Displayed navigation arrows, "none" or "default" for default one or an HTML string containing elements with data-simulated-key 
-                                                  // attribute set "UP", "DOWN", "LEFT", "RIGHT"... to replace the default navigation panel, "none" if missing 
-           aerialViewButtonId: "aerialView",      // Id of the aerial view radio button, radio buttons hidden if missing  
-           virtualVisitButtonId: "virtualVisit",  // Id of the aerial view radio button, radio buttons hidden if missing  
+           onprogression,     // Callback called while loading
+          {roundsPerMinute: 0,                    // Rotation speed of the animation launched once home is loaded in rounds per minute, no animation if missing or equal to 0
+           widthByHeightRatio: 16/9,
+           navigationPanel: "default",               // Displayed navigation arrows, "none" or "default" for default one or an HTML string containing elements with data-simulated-key
+                                                  // attribute set "UP", "DOWN", "LEFT", "RIGHT"... to replace the default navigation panel, "none" if missing
+           aerialViewButtonId: "aerialView",      // Id of the aerial view radio button, radio buttons hidden if missing
+           virtualVisitButtonId: "virtualVisit",  // Id of the aerial view radio button, radio buttons hidden if missing
            levelsAndCamerasListId: "levelsAndCameras",          // Id of the levels and cameras select component, hidden if missing
         /* level: "Roof", */                                    // Uncomment to select the displayed level, default level if missing */
         /* selectableLevels: ["Ground floor", "Roof"], */       // Uncomment to choose the list of displayed levels, no select component if empty array */
         /* camera: "Exterior view", */                          // Uncomment to select a camera, default camera if missing */
         /* selectableCameras: ["Exterior view", "Kitchen"], */  // Uncomment to choose the list of displayed cameras, no camera if missing */
            activateCameraSwitchKey: true                        // Switch between top view / virtual visit with space bar if not false or missing */
-          });  
+          });
 </script>
 
 </body>
